@startuml
class PizzaTestDrive [[java:app.PizzaTestDrive]] {
	+{static}void main(String[] args)
}
class PizzeriaStrasbourg [[java:app.PizzeriaStrasbourg]] {
	~PizzeriaStrasbourg(PizzaFactory pizzaFactory)
}
class Pizzeria [[java:app.Pizzeria]] {
}
Pizzeria <|-- PizzeriaStrasbourg
class PizzeriaBrest [[java:app.PizzeriaBrest]] {
	~PizzeriaBrest(PizzaFactory pizzaFactory)
}
class Pizzeria [[java:app.Pizzeria]] {
}
Pizzeria <|-- PizzeriaBrest
class PizzaCheeseStyleStrasbourg [[java:app.PizzaCheeseStyleStrasbourg]] {
	~PizzaCheeseStyleStrasbourg()
	+String getName()
	+void cut()
}
class Pizza [[java:app.Pizza]] {
}
Pizza <|-- PizzaCheeseStyleStrasbourg
class PizzaCheeseStyleBrest [[java:app.PizzaCheeseStyleBrest]] {
	~PizzaCheeseStyleBrest()
	+String getName()
}
class Pizza [[java:app.Pizza]] {
}
Pizza <|-- PizzaCheeseStyleBrest
class PizzeriaFactory [[java:app.PizzeriaFactory]] {
	#{static}PizzeriaFactory uniqueInstance
	-PizzeriaFactory()
	+Pizzeria create(String pPizzeriaName)
	+{static}PizzeriaFactory getInstance()
}
abstract class PizzaFactory [[java:app.PizzaFactory]] {
	+Pizza create(String name)
}
abstract class Pizza [[java:app.Pizza]] {
	#String name
	#String crust
	#String sauce
	#ArrayList<String> garnitures
	+void prepare()
	+void bake()
	+void cut()
	+void wrap()
	+String getName()
}
abstract class Pizzeria [[java:app.Pizzeria]] {
	+Pizza orderPizza(String type)
	#Pizza createPizza(String type)
}
class PizzaFactory [[java:app.PizzaFactory]] {
}
Pizzeria --> "1" PizzaFactory : pizzaFactory
class PizzaFactoryBrest [[java:app.PizzaFactoryBrest]] {
	#{static}PizzaFactoryBrest uniqueInstance
	-PizzaFactoryBrest()
	+{static}PizzaFactoryBrest getInstance()
	+Pizza create(String name)
}
class PizzaFactory [[java:app.PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryBrest
class PizzaFactoryStrasbourg [[java:app.PizzaFactoryStrasbourg]] {
	#{static}PizzaFactoryStrasbourg uniqueInstance
	-PizzaFactoryStrasbourg()
	+{static}PizzaFactoryStrasbourg getInstance()
	+Pizza create(String name)
}
class PizzaFactory [[java:app.PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryStrasbourg

PizzeriaStrasbourg -[hidden]> Pizzeria
PizzeriaBrest -[hidden]> Pizzeria

PizzeriaBrest -[hidden]-> PizzeriaStrasbourg

"PizzaTestDrive" ..> "PizzeriaFactory"
"PizzaTestDrive" ..> "Pizza"
"PizzeriaFactory" ..> "Pizzeria"
"PizzaFactory" ..> "Pizza"
"Pizzeria" ..> "Pizza" 

@enduml